--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 install: true
 addons:
   sonarcloud:
-    organization: hi
+    organization: ci
     token: f56f1af84cf704a88d9f5f6e53e7655721df2b6c
 jdk:
   - oraclejdk8
